# nova

./: Cargo.toml  README.md  schema.sql
src/: config.rs  knowledge_base.rs  lib.rs  main.rs  models.rs  nlp.rs  search_engine.rs
templates/: index.html
